# filasaudemental

./: .gitignore  CHANGELOG.md  ISSUE_GITHUB.txt  README.md  app_streamlit.py  ci.yml  pyproject.toml  servicos.py  test_integracao.py
.github/workflows/: ci.yml
src/: servicos.py
tests/: test_integracao.py
