[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "fila-saude-mental"
version = "1.1.0"
description = "Gerenciador de fila de espera para serviços de saúde mental no SUS"
readme = "README.md"
license = { file = "LICENSE" }
authors = [
  { name = "Juliano Morais", email = "juliano.morais_cs@sempreceub.com" }
]
requires-python = ">=3.10"

# Dependências de runtime — adicionado `requests` na Etapa Intermediária
dependencies = [
  "requests>=2.31.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.14",
  "ruff>=0.4",
  "requests>=2.31.0",
]

[project.scripts]
fila-saude-mental = "src.cli:main"

[tool.pytest.ini_options]
markers = [
  "integration: testes que requerem conexão real com APIs externas",
]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
