[project]
name = "fila-saude-mental"
version = "1.1.0"
description = "Gerenciador de fila de espera para servicos de saude mental no SUS"
requires-python = ">=3.10"
dependencies = [
  "requests>=2.31.0",
  "streamlit>=1.32.0",
]
requires-python = ">=3.10"

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-mock>=3.14",
  "ruff>=0.4",
]
